jerry-core/parser/js/new-parser/tests/js/strict-mode/delete-ident.js
/* This test contains strict mode parser tests. */

"use strict"

delete 1;
delete a();

a++;

delete a;
